// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search By Title Controller Snapshot Tests for find posts successfully. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [
        {
          "author": "123",
          "title": "React Guide",
        },
        {
          "author": "123",
          "title": "Learning React",
        },
      ],
      "totalDocument": 2,
      "totalPages": 1,
    },
    "message": "Data retrieved successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Search By Title Controller Snapshot Tests for no result found. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [],
      "totalDocument": 0,
      "totalPages": 1,
    },
    "message": "Data retrieved successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Search By Title Controller Snapshot Tests for page exceeds total pages. 1`] = `
{
  "body": {
    "message": "Requested page not found. Page number exceeds total pages.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Search By Title Controller Snapshot Tests for search text missing. 1`] = `
{
  "body": {
    "message": "Search query is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Search By Title Controller Snapshot Tests for should handle server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Search By Title Controller Snapshot Tests for userId missing. 1`] = `
{
  "body": {
    "message": "User ID is required.",
    "success": false,
  },
  "status": 400,
}
`;
